--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,7 +3,7 @@
   <header class="page-header">
     <h1>My Cart</h1>
   </header>
-
+  <% if enhanced_cart.length != 0 %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -48,5 +48,8 @@
       <% end %>
     </div>
   </div>
-
+<% else %>
+<h2>Your Cart is empty!</h2>
+<%= link_to "Continue Shopping", root_path, class: 'btn btn-lg btn-primary' %>
+<% end %>
 </section>
