--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,8 +1,10 @@
 <article class="product">
   <header>
+  <% if product.quantity > 0%>
     <%= link_to product do %>
       <%= image_tag product.image.thumb, alt: product.name %>
       <h4><%= product.name %></h4>
+
     <% end %>
   </header>
   <p class="description">
@@ -20,4 +22,25 @@
   <aside class="price">
     <%= humanized_money_with_symbol product.price %>
   </aside>
+  <% else %>
+  <%= link_to product do %>
+    <%= image_tag product.image.thumb, alt: product.name %>
+    <h4><%= product.name %></h4>
+  <% end %>
+</header>
+<p class="description">
+  <%= product.description %>
+</p>
+<footer class="actions">
+  <%= link_to product, class: 'btn btn-default pull-right' do %>
+    Details &raquo;
+  <% end %>
+</footer>
+<aside class="soldout">
+  <h5>SOLD OUT</h5>
+</aside>
+<aside class="price">
+  <%= humanized_money_with_symbol product.price %>
+</aside>
+  <% end %>
 </article>
