--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,16 @@
-<h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+<section class="cart-show">
+
+  <header class="page-header">
+    <h1>Store Totals</h1>
+  </header>
+  <div class="panel panel-default items">
+    <table class="table table-bordered">
+      <tr>
+        <h4>Total Products: <%=@product_amount%></h4>
+      </tr>
+      <tr>    
+        <h4>Total Categories: <%=@category_amount%></h4>
+      </tr>
+    </table>
+  </div>
+</section>
